# AI

./: .gitignore  README.md
ml-fastapi/: .gitignore  README.md  pyproject.toml  requirements.txt
ml-fastapi/app/: __init__.py  main.py
ml-fastapi/app/controllers/: algorithm_controller.py  dependencies.py  health_controller.py  plot_controller.py  prediction_controller.py  training_controller.py
ml-fastapi/app/core/: config.py  exceptions.py  logging.py
ml-fastapi/app/ml/: algorithms.py  dataset.py  evaluator.py  plots.py  trainer.py
ml-fastapi/app/models/: schemas.py
ml-fastapi/app/repositories/: model_repository.py
ml-fastapi/app/services/: ml_service.py  plot_service.py
ml-fastapi/app/views/: presenters.py
ml-fastapi/tests/: conftest.py  test_api.py  test_plots.py
